# tezedge-fuzzing

./: .gitignore  .gitmodules  README.md
context_fuzzing/: Cargo.toml  Makefile  Readme.md  get_coverage.sh
context_fuzzing/hfuzz_workspace/context_api_fuzz/: HONGGFUZZ.REPORT.TXT  SIGABRT.PC.7ffff262e8cb.STACK.1acaefc1ce.CODE.-6.ADDR.0.INSTR.mov____0x108(%rsp),%rax.fuzz  SIGABRT.PC.7ffff262e8cb.STACK.e8f9581b4.CODE.-6.ADDR.0.INSTR.mov____0x108(%rsp),%rax.fuzz
context_fuzzing/hfuzz_workspace/workingtree_deserialize_serialize_fuzz/: HONGGFUZZ.REPORT.TXT  SIGABRT.PC.7ffff262e8cb.STACK.1956cfaea5.CODE.-6.ADDR.0.INSTR.mov____0x108(%rsp),%rax.fuzz  SIGABRT.PC.7ffff262e8cb.STACK.1b375ab165.CODE.-6.ADDR.0.INSTR.mov____0x108(%rsp),%rax.fuzz  SIGABRT.PC.7ffff262e8cb.STACK.e3d8e6f06.CODE.-6.ADDR.0.INSTR.mov____0x108(%rsp),%rax.fuzz
context_fuzzing/src/: lib.rs
crypto_fuzzing/: Cargo.toml  Makefile  README.md
crypto_fuzzing/hfuzz_workspace/HashType_BlockHash_b58check_to_hash/: HONGGFUZZ.REPORT.TXT  SIGABRT.PC.7ffff7de818b.STACK.1acc785c9a.CODE.-6.ADDR.0.INSTR.mov____0x108(%rsp),%rax.fuzz
crypto_fuzzing/hfuzz_workspace/HashType_BlockHash_bytes_and_string_convert/: HONGGFUZZ.REPORT.TXT  SIGABRT.PC.7ffff7de818b.STACK.1a55a67217.CODE.-6.ADDR.0.INSTR.mov____0x108(%rsp),%rax.fuzz
crypto_fuzzing/hfuzz_workspace/HashType_BlockHash_hash_to_b58check/: HONGGFUZZ.REPORT.TXT  SIGABRT.PC.7ffff7de818b.STACK.1bccf39f1e.CODE.-6.ADDR.0.INSTR.mov____0x108(%rsp),%rax.fuzz  SIGABRT.PC.7ffff7de818b.STACK.f1980306d.CODE.-6.ADDR.0.INSTR.mov____0x108(%rsp),%rax.fuzz
crypto_fuzzing/hfuzz_workspace/base58_from_base58check/: HONGGFUZZ.REPORT.TXT  SIGABRT.PC.7ffff7de818b.STACK.dc0517667.CODE.-6.ADDR.0.INSTR.mov____0x108(%rsp),%rax.fuzz  SIGABRT.PC.7ffff7de818b.STACK.fddf6009d.CODE.-6.ADDR.0.INSTR.mov____0x108(%rsp),%rax.fuzz
crypto_fuzzing/hfuzz_workspace/base58_to_base58check/: HONGGFUZZ.REPORT.TXT
crypto_fuzzing/hfuzz_workspace/crypto_Nonce_new/: HONGGFUZZ.REPORT.TXT
crypto_fuzzing/hfuzz_workspace/crypto_box_ProofOfWork_from_hex/: HONGGFUZZ.REPORT.TXT
crypto_fuzzing/hfuzz_workspace/crypto_box_PublicKey_from_hex/: HONGGFUZZ.REPORT.TXT  SIGABRT.PC.7ffff7de818b.STACK.ec670a0d0.CODE.-6.ADDR.0.INSTR.mov____0x108(%rsp),%rax.fuzz
crypto_fuzzing/hfuzz_workspace/crypto_box_SecretKey_from_hex/: HONGGFUZZ.REPORT.TXT
crypto_fuzzing/hfuzz_workspace/crypto_box_precompute/: HONGGFUZZ.REPORT.TXT  SIGABRT.PC.7ffff7de818b.STACK.18b491adfa.CODE.-6.ADDR.0.INSTR.mov____0x108(%rsp),%rax.fuzz
crypto_fuzzing/src/: lib.rs
cumulative_coverage_for_all_targets/: Cargo.toml
cumulative_coverage_for_all_targets/src/: lib.rs
debug/: Cargo.toml  Makefile
debug/src/: main.rs
rpc_fuzzing/: Cargo.toml  Makefile  run_all.sh
rpc_fuzzing/src/: lib.rs
storage_fuzzing/: Cargo.toml  README.md
storage_fuzzing/hfuzz_workspace/BlockHeaderWithHash_decode/: HONGGFUZZ.REPORT.TXT  SIGABRT.PC.7ffff7c6418b.STACK.1bff5dc64d.CODE.-6.ADDR.0.INSTR.mov____0x108(%rsp),%rax.fuzz  SIGABRT.PC.7ffff7de818b.STACK.dc846460d.CODE.-6.ADDR.0.INSTR.mov____0x108(%rsp),%rax.fuzz
storage_fuzzing/hfuzz_workspace/Meta_decode/: HONGGFUZZ.REPORT.TXT  SIGABRT.PC.7ffff7a8118b.STACK.192e408200.CODE.-6.ADDR.0.INSTR.mov____0x108(%rsp),%rax.fuzz
storage_fuzzing/hfuzz_workspace/OperationKey_decode/: HONGGFUZZ.REPORT.TXT
storage_fuzzing/src/: lib.rs
tezedge_fuzz/: Cargo.toml  Makefile  README.md
tezedge_fuzz/fuzz/: Cargo.toml
tezedge_fuzz/fuzz/fuzz_targets/: AckMessage_from_bytes.rs  AdvertiseMessage_from_bytes.rs  BinaryChunk_from_content.rs  BlockHeaderMessage_from_bytes.rs  BlockHeader_from_bytes.rs  Component_from_bytes.rs  ConnectionMessage_from_bytes.rs  CurrentBranchMessage_from_bytes.rs  CurrentBranch_from_bytes.rs  CurrentHeadMessage_from_bytes.rs  DeactivateMessage_from_bytes.rs  GetBlockHeadersMessage_from_bytes.rs  GetCurrentBranchMessage_from_bytes.rs  GetCurrentHeadMessage_from_bytes.rs  GetOperationsMessage_from_bytes.rs  (+25 more)
tezedge_fuzz/src/: lib.rs
tezos_messages_fuzzing/: Cargo.toml  Makefile  README.md  log_hfuzz.txt
tezos_messages_fuzzing/src/: lib.rs
(+73 files in other folders)
