[package]
name = "context_fuzzing"
version = "0.1.0"
authors = ["Patrick Ventuzelo <ventuzelo.patrick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tezos_new_context = { path = "../code/tezedge/tezos/new_context" }
tezos_api  = { path = "../code/tezedge/tezos/api" }
tezos_timing = { path = "../code/tezedge/tezos/timing" }
tezos_lib_storage_ffi = { path = "../code/tezedge/tezos/lib_storage_ffi" }
honggfuzz = "0.5.52"
no-fuzz = { path = "../no-fuzz" }
ocaml-interop = { version = "0.8.4", features = ["without-ocamlopt", "caml-state"] }
# local dependencies
tezos_interop = { path = "../code/tezedge/tezos/interop" }
structopt = "0.3.22"
failure = "0.1.8"

[patch.crates-io]
ocaml-boxroot-sys = { git = "https://gitlab.com/bruno.deferrari/ocaml-boxroot.git", branch = "ocaml-410-headers" }