[package]
name = "crypto_fuzzing"
version = "0.1.0"
authors = ["Patrick Ventuzelo <ventuzelo.patrick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
honggfuzz = "0.5.52"
crypto = { path = "../code/tezedge/crypto" }
hex = "0.4"
no-fuzz = { path = "../no-fuzz" }
