[package]
name = "debug"
version = "0.1.0"
authors = ["Patrick Ventuzelo <ventuzelo.patrick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tezos_messages = { path = "../code/tezedge/tezos/messages" }
crypto = { path = "../code/tezedge/crypto" }
storage = { path = "../code/tezedge/storage" }
hex = "0.4"