[package]
name = "rpc_fuzzing"
version = "0.1.0"
authors = ["Patrick Ventuzelo <ventuzelo.patrick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
honggfuzz = "0.5.52"
serde_json = "1.0"
rpc = { path = "../code/tezedge/rpc" }
no-fuzz = { path = "../no-fuzz" }
