[package]
name = "storage_fuzzing"
version = "0.1.0"
authors = ["Patrick Ventuzelo <ventuzelo.patrick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
honggfuzz = "0.5.52"
storage = { path = "../code/tezedge/storage" }
crypto = { path = "../code/tezedge/crypto" }
no-fuzz = { path = "../no-fuzz" }
